--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <head>
         <link href="resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
+    <body>
+        <h1>Discover hidden places in the world around you</h1>
+        <h3><a href="">Download Excursion (Coming soon!)</a></h3>
+    </body>
 </html>
