--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
     <body>
         <h1>Discover hidden places in the world around you</h1>
         <h3><a href="">Download Excursion (Coming soon!)</a></h3>
+        <video>
+            <source src="resources/excursion.mp4">
+            Your browser does not support the video tag.
+        </video>
+        <h1>Your personal travel guide</h1>
+        <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+        <img src="resources/camp.jpg">
+        <img src="resources/phone.webp">
+        <h1>Coming Soon for iPhone and Android</h1>
+        <h3><a href="">Download Excursion (Coming soon!)</a></h3>
     </body>
 </html>
