--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     </head>
     <body>
         <h1>Discover hidden places in the world around you</h1>
-        <h3><a href="">Download Excursion (Coming soon!)</a></h3>
-        <video>
-            <source src="resources/excursion.mp4">
+        <h4><a href="">Download Excursion (Coming soon!)</a></h4>
+        <video autoplay>
+            <source src="resources/videos/excursion.mp4">
             Your browser does not support the video tag.
         </video>
-        <h1>Your personal travel guide</h1>
-        <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
-        <img src="resources/camp.jpg">
-        <img src="resources/phone.webp">
-        <h1>Coming Soon for iPhone and Android</h1>
-        <h3><a href="">Download Excursion (Coming soon!)</a></h3>
+        <h2>Your personal travel guide</h2>
+        <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+        <p><img src="resources/images/camp.jpg"></p>
+        <p><img src="resources/images/phone.webp"></p>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <h4><a href="">Download Excursion (Coming soon!)</a></h4>
+        <footer>
+            &copy; Excursion
+        </footer>
     </body>
 </html>
