--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Discover hidden places in the world around you</h1>
         <h4><a href="">Download Excursion (Coming soon!)</a></h4>
-        <video autoplay>
+        <video autoplay muted loop>
             <source src="resources/videos/excursion.mp4">
             Your browser does not support the video tag.
         </video>
